--- a/package.json
+++ b/package.json
@@ -27,10 +27,11 @@
     "superagent-jsonapify": "^1.4.5"
   },
   "devDependencies": {
-    "cli-engine-command": "^8.0.0",
+    "cli-engine-command": "^12.0.0",
+    "cli-engine-config": "^3.5.0",
     "eslint": "^4.19.1",
     "eslint-config-airbnb-base": "^12.1.0",
     "eslint-plugin-import": "^2.10.0",
-    "heroku-cli": "^6.16.12"
+    "heroku": "^7.14.2"
   }
 }
